cloudformation/main-stack.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: CloudQueueX AI v3.1 - Event Driven Ticket Processing Platform

Parameters:

  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select existing EC2 Key Pair

  NotificationEmail:
    Type: String
    Description: Email address for SNS notifications

Resources:

  # ==========================================
  # SECURITY GROUP
  # ==========================================

  TicketSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription: Allow SSH and Flask Access

      VpcId: vpc-0b86720653529edf6

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0

  # ==========================================
  # IAM ROLE
  # ==========================================

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup

    Properties:

      GroupDescription: ALB Security Group

      VpcId: vpc-0b86720653529edf6

      SecurityGroupIngress:

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0


  TicketEC2Role:
    Type: AWS::IAM::Role

    Properties:

      AssumeRolePolicyDocument:

        Version: '2012-10-17'

        Statement:

          - Effect: Allow

            Principal:
              Service:
                - ec2.amazonaws.com

            Action:
              - sts:AssumeRole

      ManagedPolicyArns:

        - arn:aws:iam::aws:policy/AmazonSQSFullAccess
        - arn:aws:iam::aws:policy/AmazonSNSFullAccess
        - arn:aws:iam::aws:policy/AmazonDynamoDBFullAccess
        - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess

  TicketInstanceProfile:
    Type: AWS::IAM::InstanceProfile

    Properties:

      Roles:
        - !Ref TicketEC2Role

  # ==========================================
  # SQS QUEUE
  # ==========================================

  TicketQueue:
    Type: AWS::SQS::Queue

    Properties:

      QueueName: ticket-queue

      VisibilityTimeout: 60

  # ==========================================
  # SNS TOPIC
  # ==========================================

  TicketSNSTopic:
    Type: AWS::SNS::Topic

    Properties:

      TopicName: ticket-alert-topic

      Subscription:

        - Protocol: email
          Endpoint: !Ref NotificationEmail

  # ==========================================
  # DYNAMODB TABLE
  # ==========================================

  TicketsTable:
    Type: AWS::DynamoDB::Table

    Properties:

      TableName: Tickets

      BillingMode: PAY_PER_REQUEST

      AttributeDefinitions:

        - AttributeName: ticket_id
          AttributeType: S

      KeySchema:

        - AttributeName: ticket_id
          KeyType: HASH


  # ==========================================
  # DYNAMODB USERS TABLE
  # ==========================================

  UsersTable:
    Type: AWS::DynamoDB::Table

    Properties:

      TableName: Users

      BillingMode: PAY_PER_REQUEST

      AttributeDefinitions:

        - AttributeName: email
          AttributeType: S

      KeySchema:

        - AttributeName: email
          KeyType: HASH

  # ==========================================
  # CLOUDWATCH LOG GROUP
  # ==========================================

  TicketLogGroup:
    Type: AWS::Logs::LogGroup

    Properties:

      LogGroupName: CloudQueueXLogs

      RetentionInDays: 7

  # ==========================================
  # EC2 INSTANCE
  # ==========================================

  TicketEC2:
    Type: AWS::EC2::Instance

    Properties:

      InstanceType: t2.micro

      SubnetId: subnet-0a6140334ac6bda1b

      ImageId: !Sub '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}'

      KeyName: !Ref KeyPairName

      IamInstanceProfile: !Ref TicketInstanceProfile

      SecurityGroupIds:
        - !Ref TicketSecurityGroup

      Tags:

        - Key: Name
          Value: CloudQueueX-AI

        - Key: Project
          Value: CloudQueueX-AI

        - Key: Environment
          Value: Development

      UserData:
        Fn::Base64: |
          #!/bin/bash

          dnf update -y

          dnf install python3 git -y

          pip3 install flask boto3

          mkdir -p /opt/cloudqueuex

          echo "CloudQueueX AI Ready" > /opt/cloudqueuex/status.txt


  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer

    Properties:

      Name: CloudQueueX-ALB

      Scheme: internet-facing

      Type: application

      SecurityGroups:
        - !Ref ALBSecurityGroup

      Subnets:
        - subnet-0a6140334ac6bda1b
        - subnet-0aef3e728040c95f8

  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

    Properties:

      Name: CloudQueueX-TG

      Port: 5000

      Protocol: HTTP

      VpcId: vpc-0b86720653529edf6

      HealthCheckPath: /health

      TargetType: instance

      Targets:
        - Id: !Ref TicketEC2

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener

    Properties:

      LoadBalancerArn: !Ref ApplicationLoadBalancer

      Port: 80

      Protocol: HTTP

      DefaultActions:

        - Type: forward

          TargetGroupArn: !Ref ALBTargetGroup

Outputs:

  EC2PublicIP:
    Description: EC2 Public IP

    Value: !GetAtt TicketEC2.PublicIp

  QueueURL:
    Description: SQS Queue URL

    Value: !Ref TicketQueue

  SNSTopicARN:
    Description: SNS Topic ARN

    Value: !Ref TicketSNSTopic

  DynamoDBTable:
    Description: DynamoDB Table Name

    Value: !Ref TicketsTable
  
  DynamoDBUsersTable:
    Description: DynamoDB Users Table Name

    Value: !Ref UsersTable

  CloudWatchLogGroup:
    Description: CloudWatch Log Group

    Value: !Ref TicketLogGroup

  ALBDNSName:
    Description: Application Load Balancer DNS

    Value: !GetAtt ApplicationLoadBalancer.DNSName
